# cursor-for-pcb

./: .gitignore  LICENSE  README.md
engine/: README.md  pyproject.toml
engine/pcbforge/: __init__.py  _kicad_zone_fill.py  blocks.py  bom.py  build.py  cli.py  electrical.py  fab.py  kicad_env.py  library.py  model.py  pcb.py  pcb_svg.py  project.py  render.py  render_check.py  review.py  route.py  schematic_svg.py  sim.py  zone.py
engine/pcbforge/circuits/: __init__.py  examples.py
engine/tests/: test_build.py
mcp-server/: pyproject.toml
mcp-server/pcbforge_mcp/: __init__.py  server.py
scripts/: autonomous_loop.py
web/: serve.py
web/backend/: __init__.py  agent.py  app.py  llm.py
web/frontend/: index.html
