[project]
name = "pcbforge-mcp"
version = "0.1.0"
description = "MCP server exposing the pcbforge PCB-design engine to AI agents (Claude Code, etc.)."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "pcbforge",
]

[project.scripts]
pcbforge-mcp = "pcbforge_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pcbforge_mcp*"]
